// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ユーザーカートコンポーネント ユーザーカートが空の状態 1`] = `
<DocumentFragment>
  <div
    class="w-4/5 mx-auto"
  >
    <h2
      class="text-3xl font-bold mt-10"
    >
      カート
    </h2>
    <div
      class="block py-40 mx-auto my-10 bg-neutral-100 rounded"
    >
      <h2
        class="text-center text-3xl font-bold mb-10"
      >
        カートに商品がありません
      </h2>
      <a
        href="/"
      >
        <div
          class="container mx-auto pt-1.5 text-center h-10 w-1/3 border-2 border-neutral-900 bg-white mt-4"
        >
          お買い物はこちらから
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ユーザーカートコンポーネント ユーザーカートに中身あり 1`] = `
<DocumentFragment>
  <div
    class="flex mx-auto w-4/5 gap-32"
  >
    <div
      class="w-3/5 mt-10"
    >
      <div
        class="flex"
      >
        <h2
          class="text-3xl font-bold"
        >
          カート
        </h2>
        <span
          class="mt-2"
        >
          (2点の商品)
        </span>
      </div>
      <div
        class="border border-neutral-900 my-2 py-3 px-8 h-52"
      >
        <div
          class="flex gap-5"
        >
          <a
            href="/items/itemlist/1"
          >
            <img
              alt="ベルベットアームチェア"
              class="rounded"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75"
              srcset="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
          </a>
          <div
            class="px-3 py-4"
          >
            <a
              href="/items/itemlist/1"
            >
              <p
                class="underline mb-1 text-xl"
              >
                ベルベットアームチェア
              </p>
            </a>
            <p
              class="text-sm mt-1"
            >
              ベルベットのお洒落なデザインチェア。
            </p>
            <p
              class="mt-1 text-lg"
            >
              ¥ 16,000
            </p>
          </div>
        </div>
        <div
          class="text-right"
        >
          <button
            class="text-white bg-neutral-900 border border-neutral-900 rounded px-1"
          >
            削除
          </button>
          <select
            class="ml-5 border border-neutral-900 rounded p-1"
            data-testid="select-option"
            id="cart_quantity"
            name="quantity"
          >
            <option
              selected=""
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
            <option
              value="8"
            >
              8
            </option>
            <option
              value="9"
            >
              9
            </option>
            <option
              value="10"
            >
              10
            </option>
          </select>
        </div>
      </div>
      <div
        class="border border-neutral-900 my-2 py-3 px-8 h-52"
      >
        <div
          class="flex gap-5"
        >
          <a
            href="/items/itemlist/2"
          >
            <img
              alt="丸椅子スツール"
              class="rounded"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_2.jpg&w=384&q=75"
              srcset="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_2.jpg&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_2.jpg&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
          </a>
          <div
            class="px-3 py-4"
          >
            <a
              href="/items/itemlist/2"
            >
              <p
                class="underline mb-1 text-xl"
              >
                丸椅子スツール
              </p>
            </a>
            <p
              class="text-sm mt-1"
            >
              落ち着いた可愛らしいベロア風スツール。
            </p>
            <p
              class="mt-1 text-lg"
            >
              ¥ 10,000
            </p>
          </div>
        </div>
        <div
          class="text-right"
        >
          <button
            class="text-white bg-neutral-900 border border-neutral-900 rounded px-1"
          >
            削除
          </button>
          <select
            class="ml-5 border border-neutral-900 rounded p-1"
            data-testid="select-option"
            id="cart_quantity"
            name="quantity"
          >
            <option
              selected=""
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
            <option
              value="8"
            >
              8
            </option>
            <option
              value="9"
            >
              9
            </option>
            <option
              value="10"
            >
              10
            </option>
          </select>
        </div>
      </div>
      <div
        recommend="[object Object],[object Object]"
      />
    </div>
    <div
      class="w-1/4 h-80 mt-20 p-10 border-2 border-neutral-900 rounded bg-gray-100 sticky top-10"
    >
      <p>
        <span>
          商品合計
        </span>
        <span
          class="float-right"
        >
          ¥ 26,000
        </span>
      </p>
      <p>
        <span>
          消費税
        </span>
        <span
          class="float-right"
        >
          ¥ 2,600
        </span>
      </p>
      <div
        class="border-b border-black"
      >
        <p
          class="mt-10 text-lg font-bold"
        >
          <span>
            合計
          </span>
          <span
            class="float-right"
          >
            ¥ 28,600
          </span>
        </p>
      </div>
      <a
        href="/purchase"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-8"
        >
          <span>
            ご注文手続き
          </span>
        </div>
      </a>
      <a
        href="/"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-4"
        >
          <span>
            お買い物を続ける
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ユーザーカートコンポーネント ユーザーカートの商品の個数を変更する 1`] = `
<DocumentFragment>
  <div
    class="flex mx-auto w-4/5 gap-32"
  >
    <div
      class="w-3/5 mt-10"
    >
      <div
        class="flex"
      >
        <h2
          class="text-3xl font-bold"
        >
          カート
        </h2>
        <span
          class="mt-2"
        >
          (1点の商品)
        </span>
      </div>
      <div
        class="border border-neutral-900 my-2 py-3 px-8 h-52"
      >
        <div
          class="flex gap-5"
        >
          <a
            href="/items/itemlist/1"
          >
            <img
              alt="ベルベットアームチェア"
              class="rounded"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75"
              srcset="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
          </a>
          <div
            class="px-3 py-4"
          >
            <a
              href="/items/itemlist/1"
            >
              <p
                class="underline mb-1 text-xl"
              >
                ベルベットアームチェア
              </p>
            </a>
            <p
              class="text-sm mt-1"
            >
              ベルベットのお洒落なデザインチェア。
            </p>
            <p
              class="mt-1 text-lg"
            >
              ¥ 16,000
            </p>
          </div>
        </div>
        <div
          class="text-right"
        >
          <button
            class="text-white bg-neutral-900 border border-neutral-900 rounded px-1"
          >
            削除
          </button>
          <select
            class="ml-5 border border-neutral-900 rounded p-1"
            data-testid="select-option"
            id="cart_quantity"
            name="quantity"
          >
            <option
              selected=""
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
            <option
              value="8"
            >
              8
            </option>
            <option
              value="9"
            >
              9
            </option>
            <option
              value="10"
            >
              10
            </option>
          </select>
        </div>
      </div>
      <div
        recommend="[object Object]"
      />
    </div>
    <div
      class="w-1/4 h-80 mt-20 p-10 border-2 border-neutral-900 rounded bg-gray-100 sticky top-10"
    >
      <p>
        <span>
          商品合計
        </span>
        <span
          class="float-right"
        >
          ¥ 32,000
        </span>
      </p>
      <p>
        <span>
          消費税
        </span>
        <span
          class="float-right"
        >
          ¥ 3,200
        </span>
      </p>
      <div
        class="border-b border-black"
      >
        <p
          class="mt-10 text-lg font-bold"
        >
          <span>
            合計
          </span>
          <span
            class="float-right"
          >
            ¥ 35,200
          </span>
        </p>
      </div>
      <a
        href="/purchase"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-8"
        >
          <span>
            ご注文手続き
          </span>
        </div>
      </a>
      <a
        href="/"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-4"
        >
          <span>
            お買い物を続ける
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ユーザーカートコンポーネント ユーザーカートの商品を削除 1`] = `
<DocumentFragment>
  <div
    class="flex mx-auto w-4/5 gap-32"
  >
    <div
      class="w-3/5 mt-10"
    >
      <div
        class="flex"
      >
        <h2
          class="text-3xl font-bold"
        >
          カート
        </h2>
        <span
          class="mt-2"
        >
          (1点の商品)
        </span>
      </div>
      <div
        class="border border-neutral-900 my-2 py-3 px-8 h-52"
      >
        <div
          class="flex gap-5"
        >
          <a
            href="/items/itemlist/1"
          >
            <img
              alt="ベルベットアームチェア"
              class="rounded"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75"
              srcset="/_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fchair%2Fchair_feminine_1.jpg&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
          </a>
          <div
            class="px-3 py-4"
          >
            <a
              href="/items/itemlist/1"
            >
              <p
                class="underline mb-1 text-xl"
              >
                ベルベットアームチェア
              </p>
            </a>
            <p
              class="text-sm mt-1"
            >
              ベルベットのお洒落なデザインチェア。
            </p>
            <p
              class="mt-1 text-lg"
            >
              ¥ 16,000
            </p>
          </div>
        </div>
        <div
          class="text-right"
        >
          <button
            class="text-white bg-neutral-900 border border-neutral-900 rounded px-1"
          >
            削除
          </button>
          <select
            class="ml-5 border border-neutral-900 rounded p-1"
            data-testid="select-option"
            id="cart_quantity"
            name="quantity"
          >
            <option
              selected=""
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
            <option
              value="8"
            >
              8
            </option>
            <option
              value="9"
            >
              9
            </option>
            <option
              value="10"
            >
              10
            </option>
          </select>
        </div>
      </div>
      <div
        recommend="[object Object]"
      />
    </div>
    <div
      class="w-1/4 h-80 mt-20 p-10 border-2 border-neutral-900 rounded bg-gray-100 sticky top-10"
    >
      <p>
        <span>
          商品合計
        </span>
        <span
          class="float-right"
        >
          ¥ 16,000
        </span>
      </p>
      <p>
        <span>
          消費税
        </span>
        <span
          class="float-right"
        >
          ¥ 1,600
        </span>
      </p>
      <div
        class="border-b border-black"
      >
        <p
          class="mt-10 text-lg font-bold"
        >
          <span>
            合計
          </span>
          <span
            class="float-right"
          >
            ¥ 17,600
          </span>
        </p>
      </div>
      <a
        href="/purchase"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-8"
        >
          <span>
            ご注文手続き
          </span>
        </div>
      </a>
      <a
        href="/"
      >
        <div
          class="container pt-1.5 text-center h-10 border-2 border-neutral-900 bg-white mt-4"
        >
          <span>
            お買い物を続ける
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ユーザーカートコンポーネント ユーザーカートをローディング中 1`] = `
<DocumentFragment>
  <div>
    loading...
  </div>
</DocumentFragment>
`;
